<resources>
    <!--主页面-->
    <string name="app_name">海鱼</string>
    <string name="title_search">搜索</string>
    <string name="title_publish">发布</string>
    <string name="title_my">我的</string>
    <!--登录页面-->
    <string name="title_activity_login">登录</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">教务处密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"感谢使用海鱼!"</string>
    <string name="invalid_username">您输入的用户名有误！</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"登录失败！"</string>
    <!--个人信息页面-->
    <string name="my_published_message">我的发布</string>
    <string name="default_contact">默认联系方式</string>
    <string name="default_address">默认地址</string>
    <string name="feedback">反馈</string>
    <string name="logout">注销</string>
</resources>
