<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/head_sculpture"
            android:layout_width="115dp"
            android:layout_height="108dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="96dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="176dp"
            android:layout_marginTop="604dp"
            android:text="@string/logout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/my_published_message"
            android:layout_width="289dp"
            android:layout_height="48dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="340dp"
            android:text="@string/my_published_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/default_contact"
            android:layout_width="289dp"
            android:layout_height="45dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="408dp"
            android:text="@string/default_contact"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/default_address"
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="472dp"
            android:text="@string/default_address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/feedback"
            android:layout_width="289dp"
            android:layout_height="41dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="532dp"
            android:text="@string/feedback"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>